@@ -1,4 +1,4 @@
-2013-04-13  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2013-09-07  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.8.0 released
         ========================
@@ -11,6 +11,7 @@
         Make use of GUrl class in XML I/O
         Optimize computations
         Introduce gammalib namespace for constants and functions
+        GModelSpatialDiffuseCube reads ENERGIES extension
 
 2012-12-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
